RESOLVED FIXED286972
REGRESSION(289748@main): Broke and Internal build
https://bugs.webkit.org/show_bug.cgi?id=286972
Summary REGRESSION(289748@main): Broke and Internal build
Jonathan Bedard
Reported 2025-02-03 16:33:49 PST
Internal build broken after 289748@main, unified build failure.
Attachments
Jonathan Bedard
Comment 1 2025-02-03 16:33:50 PST
Jonathan Bedard
Comment 2 2025-02-03 16:34:51 PST
EWS
Comment 3 2025-02-03 16:37:13 PST
Committed 289754@main (eb4707781fc1): <https://commits.webkit.org/289754@main> Reviewed commits have been landed. Closing PR #39946 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.