REGRESSION(289748@main): Broke and Internal build https://bugs.webkit.org/show_bug.cgi?id=286972 rdar://144123901

Unreviewed build fix.

* Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.mm:

Canonical link: https://commits.webkit.org/289754@main